--- a/Shared (App)/Resources/Base.lproj/Main.html
+++ b/Shared (App)/Resources/Base.lproj/Main.html
@@ -10,11 +10,11 @@
     <script src="../Script.js" defer></script>
 </head>
 <body>
-    <img src="../Icon.png" width="128" height="128" alt="netflix-subs-mp Icon">
-    <p class="platform-ios">You can turn on netflix-subs-mp’s Safari extension in Settings.</p>
-    <p class="platform-mac state-unknown">You can turn on netflix-subs-mp’s extension in Safari Extensions preferences.</p>
-    <p class="platform-mac state-on">netflix-subs-mp’s extension is currently on. You can turn it off in Safari Extensions preferences.</p>
-    <p class="platform-mac state-off">netflix-subs-mp’s extension is currently off. You can turn it on in Safari Extensions preferences.</p>
+    <img src="../Icon.png" width="128" height="128" alt="netflix-dual-subtitles Icon">
+    <p class="platform-ios">You can turn on netflix-dual-subtitles’s Safari extension in Settings.</p>
+    <p class="platform-mac state-unknown">You can turn on netflix-dual-subtitles’s extension in Safari Extensions preferences.</p>
+    <p class="platform-mac state-on">netflix-dual-subtitles’s extension is currently on. You can turn it off in Safari Extensions preferences.</p>
+    <p class="platform-mac state-off">netflix-dual-subtitles’s extension is currently off. You can turn it on in Safari Extensions preferences.</p>
     <button class="platform-mac open-preferences">Quit and Open Safari Extensions Preferences…</button>
 </body>
 </html>
