added language selection dropdown to popup

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="popup.css">
-    <script type="module" src="popup.js"></script>
-</head>
-<body>
-    <strong>Hello World!</strong>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="popup.css" />
+    <script type="module" src="popup.js" defer></script>
+    <style></style>
+  </head>
+  <body>
+    <h2>Netflix Dual Subtitles</h2>
+    <p>Choose language to translate from</p>
+    <input type="text" id="searchBoxF" placeholder="Search for a language..." />
+    <select id="languageDropdownF" size="5" width="100%"></select>
+    <p>Choose a language to display as a second subtitle</p>
+    <input type="text" id="searchBoxT" placeholder="Search for a language..." />
+    <select id="languageDropdownT" size="5" width="100%"></select>
+  </body>
 </html>
