--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -8,11 +8,8 @@
   </head>
   <body>
     <h2>Netflix Dual Subtitles</h2>
-    <p>Choose language to translate from</p>
-    <input type="text" id="searchBoxF" placeholder="Search for a language..." />
-    <select id="languageDropdownF" size="5" width="100%"></select>
     <p>Choose a language to display as a second subtitle</p>
-    <input type="text" id="searchBoxT" placeholder="Search for a language..." />
-    <select id="languageDropdownT" size="5" width="100%"></select>
+    <input type="text" id="searchBox" placeholder="Search for a language..." />
+    <select id="languageDropdown" size="5" width="100%"></select>
   </body>
 </html>
