--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -9,7 +9,7 @@
   <body>
     <h2 style="color: #e50914">Netflix Dual Subtitles</h2>
     <p>
-      <span id="toggleText"></span>
+      <span id="toggleText">Turn extension On/Off</span>
       <label class="switch">
         <input id="toggleSwitch" type="checkbox" />
         <span class="slider round"></span>
