--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -8,18 +8,31 @@
   </head>
   <body>
     <h2 style="color: #e50914">Netflix Dual Subtitles</h2>
-    <p>
-      <span id="toggleText">Turn extension On/Off</span>
-      <label class="switch">
-        <input id="toggleSwitch" type="checkbox" />
-        <span class="slider round"></span>
-      </label>
-    </p>
-    <input
-      type="text"
-      id="searchBox"
-      placeholder="Choose second language for subtitles ..."
-    />
-    <select id="languageDropdown" size="5" width="100%"></select>
+    <div id="apiContainer" style = "display: flex; align-items: center; gap: 10px">
+      <input
+        type="text"
+        id="apiInput"
+        placeholder="Paste your API key here ..."
+      />
+      <button id="submitButton">Submit</button>
+    </div>
+    <div style = "display: none;">
+      <p>
+        <span id="toggleText">Turn extension On/Off</span>
+        <label class="switch">
+          <input id="toggleSwitch" type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+      </p>
+      <input
+        type="text"
+        id="searchBox"
+        placeholder="Choose second language for subtitles ..."
+      />
+      <select id="languageDropdown" size="5" width="100%"></select>
+    </div>
+    <div id="errorContainer" style = "display: none;">
+      <p id="errorText"></p>
+    </div>
   </body>
 </html>
